<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.urwayittech.colt.ui.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sales Visit Report"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_20sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/company_name1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/company_name"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/company_address1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCompanyAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/company_address"
                android:minHeight="@dimen/_45sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_2sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/contact_person1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContactPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/contact_person"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/email_id1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/mobile_number1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/alternative_contact_no"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAlternativeMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/alternative_contact_no"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/designation1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/designation"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/company_website1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCompanyWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/company_website"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/company_area"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCompanyArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/company_area1"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/product_manufacture1"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProductManufacture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/product_manufacture"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/remark"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/et_box"
                android:hint="@string/remark"
                android:minHeight="@dimen/_25sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/upload_photo"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btUploadPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:background="@drawable/et_box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Upload Photo"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:background="@color/red"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"/>


                <TextView
                    android:id="@+id/tvImagePath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/shadowTextColor"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:singleLine="true"/>



            </LinearLayout>


            <TextView
                android:id="@+id/btSubmitForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/button_gradient"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:text="Submit"
                android:paddingHorizontal="@dimen/_50sdp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/tvProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>