<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.urwayittech.colt.ui.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_20sdp">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:src="@drawable/app_logo"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"

                android:gravity="center"
                android:text="@string/logIn"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/ic_email_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/shadowTextColor"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/passwordLockIcon1"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/baseline_lock_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_12sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/shadowTextColor"
                        app:layout_constraintLeft_toRightOf="@id/passwordLockIcon1"
                        app:layout_constraintRight_toRightOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/button_gradient"
                android:gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/logIn"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/_70sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>



    <ProgressBar
        android:id="@+id/tvProgressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>